chore: favorites api
