# lib/api/models/Def12.ts
@@ -1,0 +1,121 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kinnema
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface Def12
+ */
+export interface Def12 {
+    /**
+     * 
+     * @type {number}
+     * @memberof Def12
+     */
+    season?: number | null;
+    /**
+     * 
+     * @type {number}
+     * @memberof Def12
+     */
+    episode?: number | null;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof Def12
+     */
+    isWatched?: boolean | null;
+    /**
+     * 
+     * @type {number}
+     * @memberof Def12
+     */
+    tmdbId?: number | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof Def12
+     */
+    name?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof Def12
+     */
+    posterPath?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof Def12
+     */
+    userId?: string | null;
+    /**
+     * 
+     * @type {number}
+     * @memberof Def12
+     */
+    atSecond?: number | null;
+}
+
+/**
+ * Check if a given object implements the Def12 interface.
+ */
+export function instanceOfDef12(value: object): value is Def12 {
+    return true;
+}
+
+export function Def12FromJSON(json: any): Def12 {
+    return Def12FromJSONTyped(json, false);
+}
+
+export function Def12FromJSONTyped(json: any, ignoreDiscriminator: boolean): Def12 {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'season': json['season'] == null ? undefined : json['season'],
+        'episode': json['episode'] == null ? undefined : json['episode'],
+        'isWatched': json['isWatched'] == null ? undefined : json['isWatched'],
+        'tmdbId': json['tmdbId'] == null ? undefined : json['tmdbId'],
+        'name': json['name'] == null ? undefined : json['name'],
+        'posterPath': json['poster_path'] == null ? undefined : json['poster_path'],
+        'userId': json['userId'] == null ? undefined : json['userId'],
+        'atSecond': json['atSecond'] == null ? undefined : json['atSecond'],
+    };
+}
+
+export function Def12ToJSON(json: any): Def12 {
+    return Def12ToJSONTyped(json, false);
+}
+
+export function Def12ToJSONTyped(value?: Def12 | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'season': value['season'],
+        'episode': value['episode'],
+        'isWatched': value['isWatched'],
+        'tmdbId': value['tmdbId'],
+        'name': value['name'],
+        'poster_path': value['posterPath'],
+        'userId': value['userId'],
+        'atSecond': value['atSecond'],
+    };
+}
+
